--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <input type="text" id="product-edit-tag">
                 </div>
 
-                <div id="firmware-directory-container" class="hidden"> {/* Container to show/hide */}
+                <div id="firmware-directory-container" class="hidden">
                     <label for="product-edit-firmware-dir">Firmware Directory Name</label>
                     <input type="text" id="product-edit-firmware-dir" placeholder="Directory name used for build">
                     <p class="text-xs text-gray-400 mt-1">Must match the folder name under the firmware base directory.</p>
@@ -270,7 +270,7 @@
                          <input type="text" id="product-edit-customHex" pattern="^#[0-9A-Fa-f]{6}$" title="Enter a valid 6-digit hex color code starting with #">
                      </div>
                  </div>
-                 <div id="device-type-input-container"> {/* <-- WRAPPER DIV ADDED with ID */}
+                 <div id="device-type-input-container">
                      <label for="product-edit-device-type">Device Type (for FIRMWARE tag)</label>
                      <input type="text" id="product-edit-device-type" placeholder="e.g., zdma, enigma-75t">
                  </div>
