--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                          <input type="text" id="product-edit-customHex" pattern="^#[0-9A-Fa-f]{6}$" title="Enter a valid 6-digit hex color code starting with #">
                      </div>
                  </div>
-                 <div id="device-type-input-container">>
+                 <div id="device-type-input-container">
                      <label for="product-edit-device-type">Device Type (for FIRMWARE tag)</label>
                      <input type="text" id="product-edit-device-type" placeholder="e.g., zdma, enigma-75t">
                  </div>
