--- a/index.html
+++ b/index.html
@@ -206,6 +206,10 @@
                         <option value="" disabled selected>Loading device types...</option>
                         </select>
                 </div>
+                <div>
+                    <label for="generate-firmware-folder">Firmware Folder</label>
+                    <input type="text" id="generate-firmware-folder" class="w-full bg-slate-700 border border-slate-600 rounded-md py-2 px-3 text-white focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-transparent placeholder-gray-400" placeholder="Enter firmware folder path...">
+                </div>
                 <button type="submit" id="submit-firmware-generation" class="w-full bg-orange-600 hover:bg-orange-700 text-white font-medium py-2.5 px-6 rounded-lg transition duration-300 disabled:opacity-50">Start Generation</button>
                 <div id="generate-status" class="text-sm text-center h-5 mt-2"></div>
             </form>
